--- a/po/fr.po
+++ b/po/fr.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ELinks 0.10.CVS\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-09 09:23+0100\n"
-"PO-Revision-Date: 2005-01-09 09:26+0100\n"
+"POT-Creation-Date: 2005-01-12 17:47+0100\n"
+"PO-Revision-Date: 2005-01-12 17:48+0100\n"
 "Last-Translator: Laurent Monin <zas@norz.org>\n"
 "Language-Team: French <zas@norz.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: src/bfu/hierbox.c:348
 msgid "Close"
@@ -1129,8 +1129,8 @@ msgid "Cannot read the file"
 msgstr "Échec de lecture du fichier"
 
 #: src/config/dialogs.c:66
-msgid "Cannot stat the file"
-msgstr "Échec d'obtention du statut du fichier"
+msgid "Cannot get file status"
+msgstr "Impossible d'obtenir l'état du fichier"
 
 #: src/config/dialogs.c:69
 msgid "Cannot access the file"
@@ -1157,8 +1157,8 @@ msgid "Cannot write the file"
 msgstr "Ecriture du fichier impossible"
 
 #: src/config/dialogs.c:89
-msgid "Secure file error"
-msgstr "Erreur de fichier fiable"
+msgid "Secure file saving error"
+msgstr "Erreur de sauvegarde fiable du fichier"
 
 #: src/config/dialogs.c:97
 msgid "Write config error"
@@ -1422,8 +1422,8 @@ msgid "Go to the homepage"
 msgstr "Aller à la page d'accueil"
 
 #: src/config/kbdbind.c:459
-msgid "Show information about the current page HTTP headers"
-msgstr "Informations sur les en-têtes HTTP"
+msgid "Show information about the current page protocol headers"
+msgstr "Montrer les informations sur les en-têtes de la page courante"
 
 #: src/config/kbdbind.c:460
 msgid "Open history manager"
@@ -4634,8 +4634,8 @@ msgid "E~xit"
 msgstr "~Quitter"
 
 #: src/dialogs/menu.c:351
-msgid "~New window"
-msgstr "~Nouvelle fenêtre"
+msgid "Open ~new window"
+msgstr "Ouvrir une ~nouvelle fenêtre"
 
 #: src/dialogs/menu.c:370
 msgid "~OS shell"
