--- a/po/fr.po
+++ b/po/fr.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ELinks 0.10.CVS\n"
-"POT-Creation-Date: 2005-01-13 15:01+0100\n"
-"PO-Revision-Date: 2005-01-13 15:05+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2005-01-14 19:35+0100\n"
+"PO-Revision-Date: 2005-01-14 19:37+0100\n"
 "Last-Translator: Laurent Monin <zas@norz.org>\n"
 "Language-Team: French <zas@norz.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: src/bfu/hierbox.c:348
 msgid "Close"
@@ -2112,15 +2112,15 @@ msgstr "Touches d'accès"
 
 #: src/config/options.inc:145
 msgid ""
-"Options for handling of the access keys for active links.\n"
-"Access keys can be assigned using the ACCESSKEY attribute in\n"
-"HTML elements and can be used to give focus to the link when\n"
-"the assigned access key is pressed."
+"Options for handling of link access keys.\n"
+"An HTML document can use the ACCESSKEY attribute to assign\n"
+"an access key to an element. When an access key is pressed,\n"
+"the corresponding element will be given focus.\n"
 msgstr ""
-"Options pour gérer les touches d'accès aux liens actifs.\n"
-"Les touches d'accès sont assignées grâce à l'attribut ACCESSKEY\n"
-"des élements HTML and peuvent être utilisées pour obtenir le focus\n"
-"sur le lien quand la touche assignée est pressée."
+"Options pour gérer les touches d'accès aux liens.\n"
+"Un document HTML peut utilisé l'attribut ACCESSKEY pour assigner\n"
+"une touche d'accès à un élément. Quand la touche d'accès est pressée\n"
+"l'élément correspondant obtiendra le focus.\n"
 
 #: src/config/options.inc:150
 msgid "Automatic links following"
