French translation was updated.

--- a/po/fr.po
+++ b/po/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ELinks 0.10.CVS\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-14 19:35+0100\n"
-"PO-Revision-Date: 2005-01-14 19:37+0100\n"
+"POT-Creation-Date: 2005-01-14 19:44+0100\n"
+"PO-Revision-Date: 2005-01-14 19:45+0100\n"
 "Last-Translator: Laurent Monin <zas@norz.org>\n"
 "Language-Team: French <zas@norz.org>\n"
 "MIME-Version: 1.0\n"
@@ -2115,12 +2115,12 @@ msgid ""
 "Options for handling of link access keys.\n"
 "An HTML document can use the ACCESSKEY attribute to assign\n"
 "an access key to an element. When an access key is pressed,\n"
-"the corresponding element will be given focus.\n"
+"the corresponding element will be given focus."
 msgstr ""
 "Options pour gérer les touches d'accès aux liens.\n"
 "Un document HTML peut utilisé l'attribut ACCESSKEY pour assigner\n"
 "une touche d'accès à un élément. Quand la touche d'accès est pressée\n"
-"l'élément correspondant obtiendra le focus.\n"
+"l'élément correspondant obtiendra le focus."
 
 #: src/config/options.inc:150
 msgid "Automatic links following"
