--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,34 @@
+Fri Jan 14 18:47:46 2005  Laurent Monin <zas@norz.org>:
+
+	* po/fr.po:
+
+	French translation was updated.  
+
+Fri Jan 14 18:45:22 2005  Laurent Monin <zas@norz.org>:
+
+	* src/config/options.inc:
+
+	Drop superfluous newline at end of option description.  
+
+Fri Jan 14 18:42:34 2005  Laurent Monin <zas@norz.org>:
+
+	* po/fr.po:
+
+	French translation was updated.  
+
+Fri Jan 14 15:47:00 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/config/options.inc:
+
+	Rewrite the description for document.browse.accesskey.  
+
+Fri Jan 14 15:40:55 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/config/options.inc:
+
+	Any link can have an access key, not just 'active links', whatever
+	those might be.  
+
 Thu Jan 13 15:55:57 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* src/protocol/auth/Makefile.am:
@@ -11750,7 +11781,7 @@ Sun Sep 19 17:38:19 2004  Petr Baudis <pasky@ucw.cz>:
 
 	* src/document/css/README:
 
-	$Id$ tag.  
+	Add Id tag.  
 
 Sun Sep 19 17:35:23 2004  Petr Baudis <pasky@ucw.cz>:
 
