--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,39 @@
+Wed Jan 19 14:50:36 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/document.c:
+
+	Simplify cached_header_dialog() and fix a potential memleak.  
+
+Wed Jan 19 14:45:11 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* po/da.po:
+
+	Improve and fix a few translations.  
+
+Wed Jan 19 12:52:22 2005  Laurent Monin <zas@norz.org>:
+
+	* src/config/dialogs.c:
+
+	Fix potential memleak.  
+
+Wed Jan 19 11:19:22 2005  Laurent Monin <zas@norz.org>:
+
+	* src/config/: dialogs.c, dialogs.c:
+
+	Minor cleanup.  
+
+Wed Jan 19 11:11:44 2005  Laurent Monin <zas@norz.org>:
+
+	* src/config/dialogs.c:
+
+	Reduce code redundancy.  
+
+Wed Jan 19 08:55:12 2005  Laurent Monin <zas@norz.org>:
+
+	* po/fr.po:
+
+	French translation was updated.  
+
 Tue Jan 18 22:54:30 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* po/da.po:
